@@ -1,8 +1,10 @@
 <html>
-<head>
-</head>
 <body>
-<h2>BUILDING:</h2>
+
+This package implements a command line interpreter modeled after the
+High Performance Debugger Forum's interface.
+
+<h2>BUILDING</h2>
 <ul>
 <li>To build a recursive automake is used, located in src/jline. The invocation of the Makefile.am is specified through
 the main Makefile.am and configure.ac, grep those for "jline" if you want to make changes.
@@ -17,5 +19,6 @@ exception on OS X.
 <li>Command has to get preprocessed at first using Preprocessor, what
 this does is handle multiline and ';' combined commands.
 </ul>
+
 </body>
 </html>
