@@ -1,3 +1,7 @@
+2005-09-18  Andrew Cagney  <cagney@redhat.com>
+
+	* hpd/package.html: Add a proper package title.
+
 2005-09-09  Andrew Cagney  <cagney@redhat.com>
 
 	* Move com/redhat/fedora/frysk/cli/ to frysk/cli/.
